fix horizontal scrollbar at bottom and adjust auth card size

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  padding: 0;
+  padding: 50px 0 0 0;
   font-family: "Roboto", sans-serif;
 }
 
